--- a/Website/style.css
+++ b/Website/style.css
@@ -22,13 +22,7 @@
 
 
 */
-/* Não se especifica o tipo do parâmetro (ex: color) 
 
-
-FAZER - melhorar a qualidade da imagem da logo + adicionar o númeor do CRECI + CORRRETOR DE IMÓVEIS + COLOCAR DATA DA CERIMÔNIA NA AGENDA - DEFINIR FONTE DESTAQUE  
-
-
-*/
     
     :root {
     --cor-primaria: #293040;
@@ -49,123 +43,106 @@ FAZER - melhorar a qualidade da imagem da logo + adicionar o númeor do CRECI + 
         color: white;
     }
 
+   
 
-    #logo {
-        
-        
-        display: absolute;
-        
-        box-shadow: 8px 14px 10px 10px rgba(0, 0, 0, 0.479);
-        border: solid rgba(0, 0, 0, 0.317);
-        margin-right: 160px;
-        box-shadow: 3px 9px 10px 0px rgba(0, 0, 0, 0.479);
-        
-        
-       
-        
-        
-
-    }
+  
 
     nav {
         display: flex;
-       
-               justify-content: start;
+        padding-bottom: 99.5px;
+        justify-content: right;
         gap: 10px;
         flex-direction: row;
         gap: 0px 10px;
-        box-shadow: 20px 6px 10px rgba(0, 0, 0, 0.479);
+        box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.479);
         margin-bottom: 20px;
-        
-        overflow: hidden;
-        
-        
+        background-color: var(--cor-primaria);
+        padding-left: 10px;
+        padding-right: 10px;
+
     }
-
-    nav a:not(#logo) {
-
-
-        display: inline-block;
         
-        padding: 20px;
-        align-self: center;
-        text-align: center;
-        height: 15px;
-        width: 100px;
-        text-align: bottom;
-        border-radius: 10px;
-        margin-top: 0.5px;
-        color: var(--cor-secundaria);
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: bold;
+    .nav-bar {
+        display:flex;
+        justify-content: space-between;
+        padding: 1.5rem 6rem;   
+        
+     }
+
+     .logo {
+        display: flex;
+        align-items: center;
+        margin: -80px;
+        height: 250px;        
+        
+     }
+
+     .nav-list {
+        display: flex;
+        align-items: center;
+     }
+
+     .nav-list ul {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+     }
+
+     .nav-item {
+        margin: 0 15px;
+     }
+     
+     .nav-link {
         text-decoration: none;
-        border: solid rgba(0, 0, 0, 0.479);
-    }
+        font-size: 1.15rem;
+        color: var(--cor-secundaria);
+        font-weight: 400;
+        
+     }
 
+     
 
-
-  
   body {
     
-    background-color: var(--cor-primaria);
+    background-color: white;
     color: var(--cor-quintenaria);
     text-align: center;
-    color: black;
+    color: rgb(121, 35, 35);
     
    
    
   }
 
   main {
-    position: relative;
-    
-    
-    
-    
+    margin-top: 20px;
+    color: black;
+    background-color: white;
 
-
-    
-   .heroh1 {
-    display: flex;
-    text-align: center;
-    color: white;
-    text-shadow: 10px 10px 10px black;
-    font-size: 1.2em;
-    text-size-adjust: 100%;
-    justify-content: center;
-  
-    
-   } 
-    
     
   }
 
-  .hero {
-   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    box-shadow: 10px 10px 10x black;
-    background-color: rgba(0, 0, 0, 0.6);
-    height: 100vh;
-    width: 100vw;
-  
 
+  .mobile-menu-icon {
+    display: none;
+    
 
-}
+  }
 
-.video-bg {
+  .mobile-menu {
+    display: none;
+    background-color: var(--cor-primaria);
+    padding-bottom: 68px;
     
-   z-index: -1;
-   
-   width: 100vw;
-   overflow-x: hidden;
-   
-  
-    
-    
-    
-    
-    
+  }
+
+@media  screen and (max-width: 730px) {
+    .nav-bar {
+        padding: 1.5rem 4rem;
+    }
+    .nav-item {
+        display: none;
+    }
+    .mobile-menu-icon {
+        display: block;
+    }
 }
