--- a/Website/style.css
+++ b/Website/style.css
@@ -1,9 +1,17 @@
 @charset "UTF-8";
-
+@font-face {
+    font-family: 'manuscrita';
+    src: url(fonts/Angela\ Cindysttar.otf);
+}
+@font-face {
+    font-family: 'manuscrita2';
+    src: url(fonts/Bradley\ Milestiago.otf);
+}
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 /* Paleta de cores 
@@ -27,25 +35,27 @@
     :root {
     --cor-primaria: #293040;
     --cor-secundaria:#D5B263;
-    --cor-terciaria: #250214;
-    --cor-quaternaria: #4A2511;
-    --cor-quintenaria: ;
+    --cor-terciaria: #676666;
+    --cor-quaternaria: #250214;
+    --cor-quintenaria: #003d5bff;
 
     --fonte-padrão: Arial, Verdana, Helvetica, sans-serif;
     --fonte-destaque: 'definir';
    
-
+    
     }
 
 
 
     header {
         color: white;
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.32);
+        
     }
 
    
 
-  
+
 
     nav {
         display: flex;
@@ -56,11 +66,26 @@
         gap: 0px 10px;
         box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.479);
         margin-bottom: 20px;
-        background-color: var(--cor-primaria);
+        background-color: transparent;
         padding-left: 10px;
         padding-right: 10px;
 
     }
+
+
+/*
+    nav {
+        width: 100%;
+        position:static;
+        top: 0;
+        left: 0;
+        color: transparent;
+        padding: 20px 8%;
+        align-items: center;
+        justify-content:space-between;
+        background-color: transparent;
+    }
+*/
         
     .nav-bar {
         display:flex;
@@ -68,13 +93,40 @@
         padding: 1.5rem 6rem;   
         
      }
-
+     /*
      .logo {
+        
+        
+        color: var(--cor-secundaria);
+        font-weight: 100;
         display: flex;
         align-items: center;
-        margin: -80px;
-        height: 250px;        
+        flex-direction: column;
+     }
+        */
+    .logo {
+        width: 80px;
+        color:var(--cor-secundaria);
+
+    }
+    
+
+     h1.logo {
+        display: flex;
+        align-items: center;
+        font-family: manuscrita2;
         
+     }
+
+     p.logo {
+        display: flex;
+        align-items: center;
+        font-family: Arial, Helvetica, sans-serif;
+       align-items: bottom;
+        font-size: 0.5rem;
+        line-height: 0.7rem;
+        text-align: center;
+        padding: 0px 5px;
      }
 
      .nav-list {
@@ -102,37 +154,97 @@
 
      
 
-  body {
-    
-    background-color: white;
-    color: var(--cor-quintenaria);
-    text-align: center;
-    color: rgb(121, 35, 35);
-    
+  
+   
+   .hero {
+    margin-top: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(12,3,51,0.3));
+    position: absolute;
+    padding: 0, 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+   } 
    
    
-  }
-
-  main {
-    margin-top: 20px;
-    color: black;
-    background-color: white;
-
-    
-  }
-
-
   .mobile-menu-icon {
     display: none;
+    cursor: pointer;
+    background-color: transparent
     
-
   }
 
   .mobile-menu {
     display: none;
-    background-color: var(--cor-primaria);
-    padding-bottom: 68px;
+    background-color: #250214;
+    min-width: 300px;
+    max-width: 1000px;
+    padding: 20px;
     
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.605);
+    margin-bottom: 20px;
+    /* Se colocar o border-radius normal, ele só arrendonda o canto superior esquerdo e o canto inferior direito, para customizar totalmente, tem que fazer um por um */
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
+  }
+
+  .identificaçãodesktop {
+    
+   display: flex;
+   padding-top: 30px;
+   padding-left: 90px;
+   
+   font-size: 0.3rem;
+   left: 0;
+   color: var(--cor-secundaria);
+  }
+
+  .identificaçãomobile {
+    display: none;
+  }
+
+  .content {
+    text-align: center;
+    
+
+  }
+  .content h1 {
+    font-size: 60px;
+    color: #fff;
+    font-weight: 600px;
+    display: flex;
+    margin: 0;
+    position: absolute;
+    margin-top: 200px;
+    
+    
+    
+    
+    
+  }
+
+  .content a {
+    text-decoration: none;
+    display: inline-block;
+    color: #fff;
+    font-size: 24px;
+    border: 2px solid #fff;
+    padding: 14px 70px;
+    border-radius:  50px;
+    margin-top: 2;
+  }
+
+  .video-bg {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
   }
 
 @media  screen and (max-width: 730px) {
@@ -145,4 +257,24 @@
     .mobile-menu-icon {
         display: block;
     }
+    .mobile-menu-icon button {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+    .mobile-menu ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 1rem;
+
+    }
+    .mobile-menu .nav-item {
+        display: block;
+        padding-top: 1.2rem;
+    }
+    .open {
+        display: block;
+    }
+
 }
