--- a/Website/style.css
+++ b/Website/style.css
@@ -52,6 +52,8 @@
 
 
     header {
+        
+        background-color: transparent;
         color: white;
         box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.32);
         
@@ -64,6 +66,7 @@
 
 
     nav {
+        background-color: transparent;
         display: flex;
         padding-bottom: 99.5px;
         justify-content: right;
@@ -127,6 +130,7 @@
     
 
      .logo h1 {
+        
         display: flex;
         align-items: center;
         font-family: manuscrita2;
@@ -215,7 +219,7 @@
      }
 
      body {
-      
+      background-color: var(--cor-primaria);
      }
 
      
@@ -224,10 +228,12 @@
   
    
    .hero {
-   
+    top: 0;
     margin-top: 0;
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    
+    
+    
     
    /* position: absolute; */
     padding: 0, 5%;
@@ -239,11 +245,25 @@
 
    } 
    
+   .video-bg {
+    top: 0;
+    left: 0;
+    width: 100%;
+    
+    
+    position: absolute;
+    z-index: -1;
+  }
+
+
+
    
   .mobile-menu-icon {
     display: none;
     cursor: pointer;
     background-color: transparent;
+    
+    
     
     
     
@@ -296,10 +316,11 @@
 
   }
   .headline h1 {
-    font-size: 80px;
+    
+    font-size: 25px;
     color: #fff;
-    font-weight: 600px;
-    display: flex;
+    font-weight: bold;
+    display: block;
     justify-content: center;
     text-align: center;
     text-shadow: 4px 1px 6px black;
@@ -316,12 +337,7 @@
     margin-top: 2;
   }
 
-  .video-bg {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-  }
+
 
 @media  screen and (max-width: 730px) {
     .nav-bar {
